@@ -100,39 +100,40 @@ OENTRY opcodlst_1[] = {
 { "midglobal",S(MIDGLOBAL),1,   "",     "Sm",   midglobal               },
 { "=",      0,          0,      "",     ""                              },
 { "init",   0xffff      /* base names for later prefixes,suffixes */    },
-{ "betarand", 0xffff                                                    },
+{ "betarand",0xffff                                                    },
 { "bexprnd", 0xffff                                                     },
 { "cauchy",  0xffff                                                     },
+{ "cauchyi", 0xffff                                                     },
 { "chanctrl",0xffff                                                     },
 { "cpsmidib",0xffff                                                     },
 { "exprand", 0xffff                                                     },
-{ "exprandi", 0xffff                                                     },
+{ "exprandi",0xffff                                                     },
 { "gauss" ,  0xffff                                                     },
-{ "limit", 0xffff,                                                      },
+{ "limit",   0xffff,                                                      },
 { "linrand", 0xffff                                                     },
 { "midictrl",0xffff                                                     },
-{ "polyaft",0xffff                                                      },
-{ "ntrpol", 0xffff                                                      },
+{ "polyaft", 0xffff                                                      },
+{ "ntrpol",  0xffff                                                      },
 { "octmidib",0xffff                                                     },
 { "pcauchy", 0xffff                                                     },
-{ "pchbend",0xffff                                                      },
+{ "pchbend", 0xffff                                                      },
 { "pchmidib",0xffff                                                     },
 { "poisson", 0xffff                                                     },
-{ "pow",    0xffff,                                                     },
+{ "pow",     0xffff,                                                     },
 { "tableng", 0xffff,                                                    },
 { "taninv2", 0xffff                                                     },
-{ "timek", 0xffff,                                                      },
-{ "times", 0xffff,                                                      },
+{ "timek",   0xffff,                                                      },
+{ "times",   0xffff,                                                      },
 { "trirand", 0xffff                                                     },
-{ "unirand",0xffff,                                                     },
+{ "unirand", 0xffff,                                                     },
 { "weibull", 0xffff                                                     },
-{ "oscil",  0xfffe                                                      },
-{ "oscil3", 0xfffe                                                      },
-{ "oscili", 0xfffe                                                      },
-{ "peak", 0xfffd                                                        },
+{ "oscil",   0xfffe                                                      },
+{ "oscil3",  0xfffe                                                      },
+{ "oscili",  0xfffe                                                      },
+{ "peak",    0xfffd                                                        },
 { "rtclock", 0xffff                                                     },
 { "tablew",  0xfffe                                                     },
-{ "tablewkt",  0xfffe                                                   },
+{ "tablewkt",0xfffe                                                   },
 { "ihold",  S(LINK),    1,      "",     "",     ihold                   },
 { "turnoff",S(LINK),    2,      "",     "",     NULL,   turnoff         },
 { "=.r",    S(ASSIGN),  1,      "r",    "i",    rassign                 },
@@ -877,6 +878,9 @@ OENTRY opcodlst_1[] = {
 { "exprandi.i",S(PRANDI), 1,      "i",    "kxx",  iexprndi, NULL,    NULL    },
 { "exprandi.k",S(PRANDI), 3,      "k",    "kxx",  exprndiset, kexprndi, NULL },
 { "exprandi.a",S(PRANDI), 4,      "a",    "kxx",  exprndiset, NULL, aexprndi },
+{ "cauchyi.i", S(PRANDI), 1,      "i",    "kxx",  icauchyi, NULL,    NULL    },
+{ "cauchyi.k", S(PRANDI), 3,      "k",    "kxx",  cauchyiset, kcauchyi, NULL },
+{ "cauchyi.a", S(PRANDI), 4,      "a",    "kxx",  cauchyiset, NULL, acauchyi },
 /* terminate list */
 {  NULL, 0, 0, NULL, NULL, (SUBR) NULL, (SUBR) NULL, (SUBR) NULL       }
 };
