@@ -1,3 +1,7 @@
+2011-05-19  John ff  <jpff@cs.bath.ac.uk>
+
+	* OOps/cmath.c (xcauchyi): New code for cauchyi opcodes
+
 2011-05-05  john ffitch  <jpff@codemist.co.uk>
 
 	* SConstruct (optionsFilename): Try to check that the custom.py exists
